# retrieval_augemented_generation

./: .env  README.md  chunking.py  embedding.py  generate.py  generate_byLangChain.py  pyproject.toml  reranking.py  retrieval.py  vector_db.py
